[package]
name = "libheif-sys"
version = "2.2.1+1.17.6"
authors = ["Kirill Kuzminykh <cykooz@gmail.com>"]
edition = "2018"
description = "libheif bindings"
readme = "README.md"
repository = "https://github.com/cykooz/libheif-sys"
keywords = ["heic", "heif", "libheif"]
license = "MIT"
documentation = "https://docs.rs/crate/libheif-sys"
links = "heif"
build = "build.rs"
exclude = ["/data"]


[dependencies]
libc = "0.2.162"


[features]
default = ["use-bindgen"]
# Use bindgen to generate bindings for libheif,
# instead using of pre-generated bindings.rs.
use-bindgen = ["dep:bindgen"]


[build-dependencies]
bindgen = { version = "0.70.1", optional = true }
pkg-config = "0.3.31"


[target.'cfg(windows)'.build-dependencies]
vcpkg = "0.2"
walkdir = "2"


[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
tag = "2023.11.20"
dependencies = ["libheif"]


[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md", dependencies = ["libheif"] }


[package.metadata.release]
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
    { file = "CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}" }
]

# Header of next release in CHANGELOG.md:
#   ## [Unreleased] - ReleaseDate
