[package]
name = "libheif-sys"
version = "5.2.0+1.21.2"
authors = ["Kirill Kuzminykh <cykooz@gmail.com>"]
edition = "2021"
description = "libheif bindings"
readme = "README.md"
repository = "https://github.com/cykooz/libheif-sys"
keywords = ["heic", "heif", "libheif"]
license = "MIT"
documentation = "https://docs.rs/crate/libheif-sys"
links = "heif"
build = "build.rs"
exclude = [
    "/data",
    "/vendor/libheif/examples",
    "/vendor/libheif/fuzzing",
    "/vendor/libheif/go",
    "/vendor/libheif/heifio",
    "/vendor/libheif/logos",
    "/vendor/libheif/tests"
]


[package.metadata.system-deps.libheif]
v1_17 = { version = "1.17" }
v1_18 = { version = "1.18" }
v1_19 = { version = "1.19" }
v1_20 = { version = "1.20" }
v1_21 = { version = "1.21" }


[features]
v1_17 = []
v1_18 = []
v1_19 = []
v1_20 = []
v1_21 = []
latest = ["v1_21"]
# Use bindgen to generate bindings for libheif,
# instead using of pre-generated bindings.rs.
use-bindgen = ["latest", "dep:bindgen", "dep:prettyplease"]
embedded-libheif = ["dep:cmake"]


[package.metadata.docs.rs]
features = ["latest"]


[dependencies]
libc = "0.2.180"
cfg-if = "1.0"


[build-dependencies]
system-deps = "7.0"
prettyplease = { version = "0.2.37", optional = true }
bindgen = { version = "0.72.1", optional = true }
cmake = { version = "0.1.57", optional = true }


[target.'cfg(windows)'.build-dependencies]
vcpkg = "0.2.15"
walkdir = "2.5"


[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
tag = "2026.01.16"
dependencies = ["libheif[hevc,aom,x264,h264-decoder,jpeg]"]


[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md", dependencies = ["libheif[aom]"] }


[package.metadata.release]
enable-features = ["latest", "embedded-libheif"]
pre-release-replacements = [
    { file = "CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
    { file = "CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}" }
]

# Header of the next release in CHANGELOG.md:
#   ## [Unreleased] - ReleaseDate
